# EKF-GINS-TOOLS

./: .gitignore  CMakeLists.txt  conanfile.py  makefile
src/: main.cpp
src/common/: angle.h  earth.h  rotation.h  types.h
src/ekf-gins/: arbitrarily_mounted_gins.cpp  arbitrarily_mounted_gins.h  eskf-gins.cpp  eskf-gins.h  loosely_coupled_ekf.cpp  loosely_coupled_ekf.h  motion_recognizer.cpp  motion_recognizer.h
src/mahony-ahrs/: ahrs.cpp  ahrs.h
